# Palantir

./: .gitignore  CITATION.cff  LICENSE  PRIVACY.md  README  README.md  build.gradle
app/: CMakeLists.txt  STRIDE.cmake  TCL.cmake  VMD.cmake  build.gradle  molfile.cmake
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cat.cpp
app/src/main/java/io/ningyuan/palantir/: MainActivity.java  PalantirApplication.java  SceneformActivity.java
app/src/main/java/io/ningyuan/palantir/fragments/: SceneformFragment.java
app/src/main/java/io/ningyuan/palantir/models/: Molecule.java
app/src/main/java/io/ningyuan/palantir/utils/: AsyncPOC.java  Cpp.java  FileIo.java  GlbRenderer.java  ObjRenderer.java  ObjToGlb.java  PdbRenderer.java  PdbSearcher.java  PdbTitleSearcher.java  PdbToObj.java  Toaster.java
app/src/main/java/io/ningyuan/palantir/views/: AboutView.java  ImportButton.java  SearchButton.java  SearchView.java
app/src/main/models/: cro.mtl  cro.sfa
app/src/main/res/drawable/: ic_close_black_24dp.xml  ic_launcher_foreground.xml  ic_search_black_24dp.xml
app/src/main/res/layout/: activity_ux.xml  warning_dialog.xml
app/src/main/res/raw/: cro.sfb
app/src/main/res/values/: color.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: searchable.xml
gradle/wrapper/: gradle-wrapper.properties
